Refcoring and fixes for review findings
Signed-off-by: Aleksandar Stanchev <aleksandar.stanchev@bosch.com>